# Aerotri-Web

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_SUMMARY.md  LICENSE  README.md
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aerotri-web/: .env.demo.example  BLOCK_MERGE_ANALYSIS.md  CLAUDE.md  COLMAP_GLOMAP_PARAMETERS.md  CONFIGURATION.md  CONFIG_VERIFICATION.md  DEFAULT_VALUES_VERIFICATION.md  FRONTEND_PARAMETERS_UPDATE.md  GS_INTEGRATION_DEV_PLAN.md  GS_INTEGRATION_PRD.md  INSTANTSFM_ERROR_ANALYSIS.md  LIBRARY_PATH_FIX.md  PARAMETER_DEFAULT_VALUES_COMPARISON.md  README.md  SIGSEGV_HANDLING_FIX.md  check_cameras.py  check_db.py  convert_bin_to_txt.py  demo-down.sh  demo-up.sh
aerotri-web/backend/: .env.example  Cesium_3DGS_Tiles_Debug_Guide.md  DIAGNOSTIC_CONFIG_GUIDE.md  GS_PARAMS_DEFAULT_UPDATE.md  GS_TRAINING_FIX.md  MERGE_2DPOINTS_FIX.md  MERGE_ANALYSIS.md  MERGE_FIX_SUMMARY.md  MERGE_GLOMAP_FIX.md  MIGRATION_TODO.md  TASK_RECOVERY_ANALYSIS.md  fix_merged_images_2dpoints.py  requirements.txt  test_glomap_optimize_manual.py  test_gs_manual.py  test_merge_manual.py  (+6 more)
colmap/: build_cuda.sh  编译说明.md
colmap/src/glomap/: CMakeLists.txt
docs/: 3D_TILES_DEPENDENCIES.md  3D_TILES_TROUBLESHOOTING.md  AI_Diagnostic_Agent_Architecture.md  ARCHITECTURE.md  COLMAP_GLOMAP_算法框架梳理.md  COLMAP_pose_prior_数据流与姿态先验加速.md  COLMAP_to_OpenSfM_转换流程.md  COLMAP_地理参考与坐标系对齐_model_aligner_流程.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  DEPENDENCIES.md  FEATURES.md  GLOMAP_position_prior_移植与验证.md  MIGRATION.md  NOTIFICATION_SETUP.md  OpenMVG编译手册.md  OpenMVS编译手册.md  README.md  ROADMAP.md  Vibe Coding最佳实践.md  Vibe Coding最佳实践.md.backup  feature_branch_vs_current_implementation.md  gitee_ssh_pubkey.txt  openmvs_reconstruction_design.md  openmvs_reconstruction_prd.md  项目使用文档.md  项目开发文档.md  项目说明文档.md
glomap/: fix_pose_priors_crash.patch
gs_workspace/: convert_opencv_to_pinhole.py  install_pytorch_from_source.sh
openMVS/: CMakeLists.txt  OpenMVS_CUDA编译说明.md  OpenMVS_使用指南.md
tools/: cc2odm.py  colmap2cc.py  colmap2opensfm.py  compare_conversions.py  extract_gps_origin.py  install_3d_tiles_dependencies.sh
(+274 files in other folders)
